# chempfn

./: .gitignore  CITATION.cff  Dockerfile  README.md  eml_canonical_smiles.csv  pyproject.toml  requirements.txt  setup.py  test.csv  train.csv
.do/: app.yml  deploy.template.yml
app/: app.py  doc.md  example.csv  example_osm.csv  examples_carcinogen_tdc.csv  requirements.txt
chempfn/: __init__.py  ensemble_builder.py  ensemble_tabpfn.py  result.py  utils.py
chempfn/samplers/: __init__.py
data/: carcinogens_lagunin.tab
data/tdc/: ames_train_1.csv  ames_train_2.csv  ames_train_3.csv  ames_train_4.csv  ames_train_5.csv  ames_valid_1.csv  ames_valid_2.csv  ames_valid_3.csv  ames_valid_4.csv  ames_valid_5.csv  bbb_martins_train_1.csv  bbb_martins_train_2.csv  bbb_martins_train_3.csv  bbb_martins_train_4.csv  bbb_martins_train_5.csv  bbb_martins_valid_1.csv  bbb_martins_valid_2.csv  bbb_martins_valid_3.csv  bbb_martins_valid_4.csv  bbb_martins_valid_5.csv  bioavailability_ma_train_1.csv  bioavailability_ma_train_2.csv  bioavailability_ma_train_3.csv  bioavailability_ma_train_4.csv  bioavailability_ma_train_5.csv  bioavailability_ma_valid_1.csv  bioavailability_ma_valid_2.csv  bioavailability_ma_valid_3.csv  bioavailability_ma_valid_4.csv  bioavailability_ma_valid_5.csv  cyp2c9_substrate_carbonmangels_train_1.csv  cyp2c9_substrate_carbonmangels_train_2.csv  cyp2c9_substrate_carbonmangels_train_3.csv  cyp2c9_substrate_carbonmangels_train_4.csv  cyp2c9_substrate_carbonmangels_train_5.csv  cyp2c9_substrate_carbonmangels_valid_1.csv  cyp2c9_substrate_carbonmangels_valid_2.csv  cyp2c9_substrate_carbonmangels_valid_3.csv  cyp2c9_substrate_carbonmangels_valid_4.csv  cyp2c9_substrate_carbonmangels_valid_5.csv  (+90 more)
data/tdc_preds/: bbb_martins_test_1.csv  bbb_martins_test_2.csv  bbb_martins_test_3.csv  bbb_martins_test_4.csv  bbb_martins_test_5.csv  bbb_martins_valid_1.csv  bbb_martins_valid_2.csv  bbb_martins_valid_3.csv  bbb_martins_valid_4.csv  bbb_martins_valid_5.csv  bioavailability_ma_test_1.csv  bioavailability_ma_test_2.csv  cyp2c9_veith_test_1.csv  (+31 more)
ensemble_tabpfn/: __init__.py  ensemble_builder.py  ensemble_tabpfn.py  result.py  utils.py
experiments/: foo.py  small_dataset.py
models/: bbb_martins_1.joblib  bioavailability_ma_1.joblib  hia_hou_1.joblib  pgp_broccatelli_1.joblib
notebooks/: README.md  adme_tdcommons.ipynb  antimicrobials.ipynb  tdc_cyp2c9_veith.ipynb  tdc_hia_hou.ipynb
tests/: ensemble.pkl  test_chempfn.py  test_ensemble_tabpfn.py  test_estimator.py  test_utils.py
(+7 files in other folders)
