[tool.poetry]
name = "ensemble-tabpfn"
version = "0.1.0"
description = "Adaptation of TabPFN to work with large tabular datasets."
authors = ["Ersilia Open Source Initiative"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/ersilia-os/ensemble-tabpfn"
packages = [{include = "ensemble_tabpfn"}]

[tool.poetry.dependencies]
python = "^3.8.1"
tabpfn = "0.1.9"
lolP = "0.0.4"

[tool.poetry.group.dev.dependencies]
black = "23.1.0"
flake8 = "6.0.0"
mypy = "1.0.1"
mypy-extensions = "1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "7.2.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
