[tool.poetry]
name = "chempfn"
version = "0.1.0"
description = "Adaptation of TabPFN to work with large tabular datasets."
authors = ["Ersilia Open Source Initiative"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/ersilia-os/chempfn"
packages = [{include = "chempfn"}]

[tool.poetry.dependencies]
python = "^3.9"
tabpfn = "0.1.9"
lolP = "0.0.4"
eosce = { git = "https://github.com/ersilia-os/compound-embedding-lite.git", branch = "main" , python = ">=3.10,<4.0.0"}

[tool.poetry.group.dev.dependencies]
black = "23.1.0"
flake8 = "6.0.0"
mypy = "1.0.1"
mypy-extensions = "1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "7.2.1"
PyTDC = { version = "0.4.12", python = ">=3.8.1,<3.12" }

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
